<resources>
    <string name="app_name" translatable="false">MyHealthPartner</string>
    <string name="title_activity_main" translatable="false">My Health Partner</string>
    <string name="title_activity_profile">Profile</string>
    <string name="button_start">Start</string>
    <string name="button_stop">Stop</string>
    <string name="button_update">Update</string>
    <string name="button_clear">Clear</string>
    <string name="action_profile">Profile</string>
    <string name="action_show_datas">Show datas</string>
    <string name="text_weight">Weight (kg)</string>
    <string name="text_height">Height (cm)</string>
    <string name="text_gender">Gender</string>
    <string name="text_birthday">Birthday</string>
    <string name="hint_height" translatable="false">170</string>
    <string name="hint_weight" translatable="false">60</string>
    <string name="sending_data_message"> Do you want to send the accelerometer data ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="acquisition_sent">Acquisition sent</string>
    <string name="acquisition_deleted">Acquisition deleted</string>
    <string name="url_server">http://192.168.42.165:8080/</string>
    <string name="activity_podometre">Podometer</string>
    <string name="steps_count">Steps count:</string>
    <string name="calorie">Calorie burned:</string>
    <string name="distance">Distance travelled:</string>
    <string name="thresh_val">Thresh val:</string>
    <string name="time_val">Time:</string>
    <string name="profile_information">Profile Information</string>
    <string name="profile_quit_forbidden">You have to set a profile</string>
    <string name="select_date">Select date</string>
    <string name="invalid_profile">Invalid profile</string>
    <string name="activity_repport">Repport</string>
    <string name="follow_up">Follow-Up</string>
    <string name="main_activity_information">Today\'s Results</string>
    <string name="activity_report">Report</string>




    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="save">Save</string>
    <string name="button_profile">profile</string>
    <string name="button_tracker">Tracker</string>
    <string name="toast_profile_missing">Please enter your profile</string>
    <string name="step">step</string>

</resources>
